update minio configuration
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/monitoring/minio.yaml
+++ b/helm-values/monitoring/minio.yaml
@@ -157,7 +157,7 @@ persistence:
   ##
   ## Storage class of PV to bind. By default it looks for standard storage class.
   ## If the PV uses a different storage class, specify that here.
-  storageClass: "netapp-file-backup"
+  storageClass: "netapp-block-standard"
   volumeName: ""
   accessMode: ReadWriteOnce
   size: 15Gi
@@ -416,13 +416,10 @@ makeServiceAccountJob:
   exitCommand: ""
 
 buckets:
-  - name: dts-metrics-blocks-bucket
+  - name: dts-metrics
     policy: none
     purge: false
-  - name: dts-metrics-ruler-bucket
-    policy: none
-    purge: false
-  - name: admin
+  - name: dts-logs
     policy: none
     purge: false
 
