Blank out and set text for sandbox governance link
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -62,6 +62,9 @@ ui:
   image:
     pullPolicy: Always
   ux:
+    aboutBusiness:
+      linkTitle: "No service agreement available for Sandbox environment"
+      link: " "
     infoBanner:
       showMessage: true
   oidc:
