--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -74,6 +74,7 @@ ui:
     showWritableComponents: true
     authority: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz
     jwksUri: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz/protocol/openid-connect/certs
+    extraQueryParams: '{"kc_idp_hint":"idir"}'
     realm: "digitaltrust-citz"
     reservationForm: >-
       {
