--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -61,6 +61,9 @@ acapy:
     maxReplicas: 5
     targetCPUUtilizationPercentage: 80
     targetMemoryUtilizationPercentage: 80
+  resources:
+    limits:
+      cpu: 750m
 tenant_proxy:
   image:
     pullPolicy: Always
