Increase mongo resources
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/vc-authn-oidc/prod.yaml
+++ b/helm-values/vc-authn-oidc/prod.yaml
@@ -94,10 +94,10 @@ acapy:
 mongodb:
   resources:
     limits:
-      cpu: 800m
+      cpu: 1
       memory: 1000Mi
     requests:
-      cpu: 40m
+      cpu: 400m
       memory: 450Mi
   readinessProbe:
     enabled: true
