--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -15,6 +15,10 @@ acapy:
       genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/test/pool_transactions_genesis"
       endorser_did: "8pcyugH47GpPocmz9AxxDF"
       endorser_alias: "candy-test-endorser"
+    - id: candy-prod
+      is_production: true
+      is_write: false
+      genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
     - id: sovrin-testnet
       is_production: true
       is_write: true
