adjust cpu limits
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/vc-authn-oidc/dev.yaml
+++ b/helm-values/vc-authn-oidc/dev.yaml
@@ -111,3 +111,8 @@ mongodb:
   livenessProbe:
     enabled: true
     timeoutSeconds: 10
+postgresql:
+  primary:
+    resources:
+      limits:
+        cpu: 800m
