--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -112,11 +112,13 @@ vc-authn-oidc:
       existingSecret: "vc-authn-oidc-mongodb"
     resources:
       limits:
-        cpu: 1
+        cpu: 1600
         memory: 1000Mi
       requests:
         cpu: 400m
         memory: 450Mi
+    metrics:
+      enabled: true
     readinessProbe:
       enabled: true
       timeoutSeconds: 10
