adjust cpu limits
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/vc-authn-oidc/prod.yaml
+++ b/helm-values/vc-authn-oidc/prod.yaml
@@ -107,3 +107,10 @@ mongodb:
   livenessProbe:
     enabled: true
     timeoutSeconds: 10
+
+postgresql:
+  primary:
+    resources:
+      limits:
+        cpu: 700m
+        memory: 2600Mi
