adjust cpu limits
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/test/values.yaml
+++ b/services/vc-authn-oidc/charts/test/values.yaml
@@ -137,6 +137,9 @@ vc-authn-oidc:
     auth:
       existingSecret: "vc-authn-oidc-postgresql"
     primary:
+      resources:
+        limits:
+          cpu: 600m
       persistence:
         size: 5Gi
     metrics:
