--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -25,6 +25,10 @@ acapy:
       genesis_url: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis"
       endorser_did: "EZpKx6nT56Hv83JmNz7ik8"
       endorser_alias: "sovrin-testnet-endorser"
+    - id: sovrin-mainnet
+      is_production: true
+      is_write: false
+      genesis_url: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis"
   plugin-config.yml:
     traction_innkeeper:
       innkeeper_wallet:
