--- a/.github/workflows/gitops_sync.yaml
+++ b/.github/workflows/gitops_sync.yaml
@@ -1,8 +1,9 @@
 name: Sync Changes to GitOps Repo
 
 on:
-  pull_request:
-    types: [closed]
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
