--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -112,7 +112,7 @@ vc-authn-oidc:
       existingSecret: "vc-authn-oidc-mongodb"
     resources:
       limits:
-        cpu: 1600
+        cpu: 1600m
         memory: 1000Mi
       requests:
         cpu: 400m
