--- a/services/traction/charts/test/values.yaml
+++ b/services/traction/charts/test/values.yaml
@@ -16,12 +16,20 @@ traction:
         genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/test/pool_transactions_genesis"
         endorser_did: "8pcyugH47GpPocmz9AxxDF"
         endorser_alias: "candy-test-endorser"
+      - id: candy-prod
+        is_production: true
+        is_write: false
+        genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
       - id: sovrin-testnet
         is_production: true
         is_write: true
         genesis_url: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis"
         endorser_did: "EZpKx6nT56Hv83JmNz7ik8"
         endorser_alias: "sovrin-testnet-endorser"
+      - id: sovrin-mainnet
+        is_production: true
+        is_write: false
+        genesis_url: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis"
     plugin-config.yml:
       traction_innkeeper:
         innkeeper_wallet:
