Update dev deploy vcauth config for proof type and deep link
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/vc-authn-oidc/dev.yaml
+++ b/helm-values/vc-authn-oidc/dev.yaml
@@ -6,8 +6,9 @@ image:
 
 acapyTenancyMode: single
 setNonRevoked: true
-useOobPresentProof: false
+useOobPresentProof: true
 useOobLocalDIDService: false
+useUrlDeepLink: true
 controllerCameraRedirectUrl: wallet_howto
 controllerPresentationExpireTime: 300
 useHTTPS: true
