Delete VC-AuthN helm-values in favour of values in services folder
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -6,8 +6,9 @@ vc-authn-oidc:
     tag: sha-23676cc
   acapyTenancyMode: single
   setNonRevoked: true
-  useOobPresentProof: false
+  useOobPresentProof: true
   useOobLocalDIDService: false
+  useUrlDeepLink: true
   controllerCameraRedirectUrl: wallet_howto
   controllerPresentationExpireTime: 300
   useHTTPS: true
