Add missing existingSecret specifications
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/services/traction/charts/prod/values.yaml
+++ b/services/traction/charts/prod/values.yaml
@@ -1,6 +1,13 @@
 traction:
   ingressSuffix: -prod.apps.silver.devops.gov.bc.ca
   acapy:
+    secret:
+      adminApiKey:
+        existingSecret: traction-acapy-api
+      pluginInnkeeper:
+        existingSecret: traction-acapy-plugin-innkeeper
+      walletKey:
+        existingSecret: traction-acapy-walletkey
     ledgers.yml:
       - id: candy-prod
         is_production: true
