--- a/services/vc-authn-oidc/charts/test/values.yaml
+++ b/services/vc-authn-oidc/charts/test/values.yaml
@@ -7,6 +7,7 @@ vc-authn-oidc:
 
   acapyTenancyMode: single
   setNonRevoked: true
+  invitationLabel: BC Gov SSO Service (Test)
   useOobPresentProof: false
   useOobLocalDIDService: false
   controllerCameraRedirectUrl: wallet_howto
