Add registered_urls to LCRB retail store schema
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/orgbook-issuer-controller/config/lcrb/services.yml
+++ b/openshift/templates/orgbook-issuer-controller/config/lcrb/services.yml
@@ -145,6 +145,17 @@ issuers:
             value:
               input: country
               from: claim
+        - model: attribute
+          fields:
+            type:
+              input: registered_urls
+              from: value
+            format:
+              input: text
+              from: value
+            value:
+              input: registered_urls
+              from: claim
     - schema: cannabis-marketing-licence.lcrb
       description: Cannabis Marketing Licence
       label_en: Cannabis Marketing Licence
