--- a/openshift/templates/orgbook-issuer-controller/config/lcrb/dev/services.yml
+++ b/openshift/templates/orgbook-issuer-controller/config/lcrb/dev/services.yml
@@ -224,6 +224,17 @@ issuers:
             value:
               input: effective_date
               from: claim
+        - model: attribute
+          fields:
+            type:
+              input: registered_urls
+              from: value
+            format:
+              input: text
+              from: value
+            value:
+              input: registered_urls
+              from: claim
 
 verifiers:
   bctob:
