Use environment variables for configuration
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -285,8 +285,7 @@ objects:
                   --wallet-storage-creds "$(eval echo \"${WALLET_STORAGE_CREDENTIALS}\")"
                   --seed "${INDY_WALLET_SEED}"
                   --admin '0.0.0.0' ${ADMIN_INTERFACE_PORT}
-                  $([ ! -z "${AGENT_ADMIN_API_KEY}" ] && echo "--admin-api-key ${AGENT_ADMIN_API_KEY}" || echo "--admin-insecure-mode")
-                  --plugin rpc.v1_0);
+                  $([ ! -z "${AGENT_ADMIN_API_KEY}" ] && echo "--admin-api-key ${AGENT_ADMIN_API_KEY}" || echo "--admin-insecure-mode"));
               env:
                 - name: ACAPY_LABEL
                   value: ${ACAPY_LABEL}
@@ -337,6 +336,11 @@ objects:
                   value: ${ACAPY_AUTO_WRITE_TRANSACTIONS}
                 - name: ACAPY_CREATE_REVOCATION_TRANSACTIONS
                   value: ${ACAPY_CREATE_REVOCATION_TRANSACTIONS}
+                
+                - name: ACAPY_PLUGIN
+                  value: ${ACAPY_PLUGIN}
+                - name: ACAPY_PLUGIN_CONFIG
+                  value: ${ACAPY_PLUGIN_CONFIG}
 
                 - name: AGENT_WALLET_NAME
                   value: ${NAME}${SUFFIX}-wallet
@@ -718,6 +722,20 @@ parameters:
     required: true
     value: 'false'
   # ===============================================================================
+
+  # ===============================================================================
+  # Plugin Configuration
+  #--------------------------------------------------------------------------------
+  - name: ACAPY_PLUGIN
+    displayName: Plugin list
+    description: Plugin list
+    required: false
+    value:
+  - name: ACAPY_PLUGIN_CONFIG
+    displayName: Plugin configuration file
+    description: Plugin configuration file
+    required: false
+    value:
 
   # ===============================================================================
   # Wallet Configuration
