Do not run on forks
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/.github/workflows/gitops_sync.yaml
+++ b/.github/workflows/gitops_sync.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   sync_changes:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'bcgov'
     steps:
     - uses: actions/checkout@v4
 
