disable default database creation
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/traction/sandbox/values.yaml
+++ b/services/traction/sandbox/values.yaml
@@ -143,6 +143,8 @@ ingress:
   annotations:
     route.openshift.io/termination: edge
 postgresql:
+  auth:
+    database: null
   primary:
     persistence:
       size: 5Gi
